turtleart.kerr36.Kerr36.scala.error
Compilation error:
Kerr36:47: error: Unmatched closing brace '}' ignored here
}
^